# lostcatithaca

./: .gitignore  Caddyfile  Dockerfile  README.md  deploy.md  package-lock.json  package.json  pyproject.toml
backend/: .gitignore
backend/lostcats/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/lostcats/migrations/: 0001_initial.py
backend/project/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/pages/: About.tsx  Map.css  Map.tsx
src/: manage.py
src/frontend/sass/: _base.scss  styles.scss
src/frontend/sass/components/: _map.scss
src/frontend/sass/pages/: _cat_create.scss  _cat_detail.scss  _cat_locate.scss  _gallery.scss  _home.scss  _map.scss
src/lostcats/: admin.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
src/lostcats/management/commands/: deploy.py  generate_thumbnails.py
src/lostcats/migrations/: 0002_lostcat_thumbnail.py  0003_alter_lostcat_thumbnail.py  0004_lostcat_image_exif_stripped.py  0005_lostcat_slug.py  0006_auto_20210618_0116.py  0007_alter_lostcat_slug.py  0008_alter_lostcat_slug.py  0009_lostcat_resized_image.py  0010_alter_lostcat_description.py  0011_alter_lostcat_options.py
src/lostcats/templates/lostcats/: base.html  cat_create.html  cat_detail.html  cat_locate.html  gallery.html  home.html  map.html  metadata.html
src/lostcats/tests/: __init__.py  factories.py  utils.py
src/project/: asgi.py  settings.py  settings_local.py.example  urls.py  wsgi.py
(+24 files in other folders)
